# ler

./: .buildinfo  .gitattributes  .gitignore  .ler_mac.yaml  .pypirc  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  THREAD_MANAGEMENT_AUDIT.md  THREAD_MANAGEMENT_FIXES.md  THREAD_MANAGEMENT_INDEX.md  THREAD_MANAGEMENT_SUMMARY.md  THREAD_MANAGEMENT_VISUAL.md  docstring_template.py  doctring_template.py  fix_inline.py  fix_inline2.py  fix_inline3.py  ler.mmd  ler.yaml  ler.yml  ler2.yaml  ler_mermain.md  pyproject.toml  rates.mmd  reproduce_error.py  requirements.txt  requirements_sphinx.txt  setup.py  test.md  test.yaml
.arxiv/: paper.fdb_latexmk  paper.out
.arxiv/arxiv/: paper.aux
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yml  run-test.yml  tests.yml
arxiv/: paper.aux  paper.blg  paper.fdb_latexmk  paper.fls  paper.tex  paper_ver2.md
arxiv paper/: paper.fls
arxiv/arxiv/: paper.bib  paper.tex
dev/: bayestar_no_virgo.fits.gz.1  bayestar_test.ipynb  bns_GW230529.ipynb  bns_gw230529_mu.ipynb  bns_latest.ipynb  bns_test copy.ipynb  bns_test.ipynb  bns_uniform copy.ipynb  bns_uniform.ipynb  change_merger_rate_density.ipynb  cluster_lensing.ipynb  dt_mu_plot.ipynb  equartions2.md  event_selection.ipynb  grb detection rate copy 2.ipynb  grb detection rate copy.ipynb  grb detection rate.ipynb  halo mass function.ipynb  ler_bbh_examples.ipynb  optical depth cluster lensing.ipynb  pe_gw230529.ipynb  po_equations.ipynb  posterior_overlap.ipynb  simulation.ipynb  tau_tst_clus_mu10_mf1.txt  tau_zs_bluedash.csv  test.ipynb  time_delay_hyperspace.ipynb
dev/ler_data/: log10_dtau12_dtau13_dtau14.csv
devdir/: SISlenses.ipynb  bbh_3G.ipynb  epl_od.md  function_interpolator copy.ipynb  gamma_spline.ipynb  image_position_solver_change.ipynb  mupm3test.ipynb  optical_depth_epl_shear.ipynb  optical_depth_epl_shear_old.ipynb  optical_depth_sis_check.ipynb  sfr_timedelay.ipynb  test.ipynb  zl_distribution.ipynb
docs/: GW_equations.ipynb  GW_events.ipynb  Installation.rst  Installation2.rst  LIGO design sensitivity.ipynb  Lensed events.ipynb  Lensed_equations.ipynb  Lensed_events.ipynb  Rate comparision.ipynb  Summary.ipynb  Unlensed_events.ipynb  analytical_formulation_lensed copy.md  analytical_formulation_lensed.md  analytical_formulation_unlensed copy.md  analytical_formulation_unlensed.md  code_overview.rst  conf.py  conf2.py  index.rst  installation.rst  latest_rates.ipynb  lens_equations.md  lensed.ipynb  ler.rst  modules.rst  rate_comparision.ipynb  requirements.txt  requirements.yml  short examples.ipynb  unlensed.ipynb  various topics.ipynb
docs2/: event_selection.ipynb  requirements.txt  requirements.yml
examples/: EPL_Shear_caustic_plot.ipynb  KDE.ipynb  LeR_params.json  ThirdGen_dtdmu_ET.ipynb  Untitled.ipynb  custom_unlensed_param.ipynb  dt_vs_dmu.ipynb  event_selection.ipynb  future_detectors.ipynb  gw_params_detectable.json  gwevents_phdf0.txt  lensed_params_detectable.json  ler_stable_old.ipynb  merger rate density models.ipynb  n_event_sampling copy.ipynb  new.ipynb  pop_III.ipynb  poster copy 2.ipynb  poster copy.ipynb  poster.ipynb  presentation.ipynb  rate_comparision.ipynb  snr_check.ipynb  source_population.ipynb  sub_threshhold.ipynb  test.ipynb  testing_gwcosmo.ipynb  third_gen_detector.ipynb  withspin.ipynb  zsvsmc3G.ipynb  zsvsmcO4 copy.ipynb  zsvsmcO4.ipynb
interpolator_pickle/: halfSNR_dict_0.pickle  param_dict_list.pickle
ler/: __init__.py  _version.py  docstringtest.py  helperroutines.py  installation.rst  lens_galaxy_population.py  ler.py  ler_old1.py  ler_old2.py  multiprocessing_routine.py  solve_lens_equation.py  source_population.py
ler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
paper/: ._paper_.md  Makefile  README.md  draft_old  paper copy.md  paper.aux  paper.bib  paper.fdb_latexmk  paper.fls  paper.ipynb  paper.md  paper.tex  paper_ver1.md  paper_ver3.md
test/: Injection_PE.ipynb  LeR_example.py  LeR_test.py  ThirdGen_dtdmu_CE_ET.ipynb  bbh_1M.py  dt_vs_dmu.ipynb  n_event_sampling.ipynb  pop_III.ipynb  rate_comparision.ipynb  third_gen_detector.ipynb  zsvsmcO4 copy 2.ipynb
tests/: README.md  conftest.py  tests_utils.py
(+1158 files in other folders)
