[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ler"
dynamic = ["version"]
description = "ler: LVK (LIGO-Virgo-KAGRA collaboration) Event (compact-binary mergers) Rate calculator and simulator"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hemantakumar Phurailatpam", email = "hemantaphurailatpam@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "setuptools>=65.5.0",
    "matplotlib>=3.4.2",
    "numpy<=1.26.4",
    "numba>=0.60.0",
    "gwsnr>=0.4.0",
    "importlib_resources",
    "lenstronomy>=1.10.4",
    "astropy>=5.1",
    "tqdm>=4.64.1",
    "pointpats>=2.3",
    "shapely>=2.0.1",
    "corner>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/hemantaph/ler"
Repository = "https://github.com/hemantaph/ler"
Documentation = "https://ler.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[tool.setuptools]
packages = ["ler", "ler.rates", "ler.gw_source_population", "ler.image_properties", "ler.lens_galaxy_population", "ler.utils"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ler._version.__version__"}

[tool.setuptools.package-data]
"ler" = ["rates/ler_data/*"]
"ler.rates" = ["ler_data/*"]
"ler.rates.ler_data" = ["*.zip"]

[tool.ruff]
# Ignore E731: Do not assign a lambda expression, use a def
lint.ignore = ["E731", "E402"]
